# malody-chart-distributor

./: .gitignore  LICENSE  README.md  config.example.py  config.py  db.py  main.py  parser.py  pyproject.toml  run.ps1  run.sh
docs/: Malody Store API CN.md
